renamed and adding support for args.

--- a/EzChat.html
+++ b/EzChat.html
@@ -42,7 +42,7 @@
     </style>
 </head>
 <body>
-    <h1>Quanta Chat</h1>
+    <h1>EzChat</h1>
     <div id="chatLog"></div>
     <div id="connectionStatus" class="status">Disconnected</div>
     <div>
