--- a/EzChat.html
+++ b/EzChat.html
@@ -23,7 +23,7 @@
         }
 
         #chatLog {
-            height: 300px;
+            height: 400px;
             border: 1px solid #333;
             margin-bottom: 10px;
             margin-top: 10px;
@@ -42,7 +42,7 @@
         }
 
         #messageInput {
-            width: 70%;
+            width: 80%;
             padding: 8px;
             min-height: 60px;
             resize: vertical;
@@ -52,7 +52,6 @@
             border: 1px solid #333;
         }
 
-        #sendButton,
         #connectButton {
             padding: 8px 15px;
             background-color: #1d9bf0;
@@ -60,6 +59,16 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+        }
+
+        #sendButton {
+            padding: 8px 15px;
+            background-color: #1d9bf0;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            vertical-align: top;
         }
 
         #sendButton:hover,
