borders around the messages

--- a/EzChat.html
+++ b/EzChat.html
@@ -97,8 +97,26 @@
             text-align: right;
         }
 
+        .local .message-content {
+            border: 2px solid #2ea043;
+            border-radius: 8px;
+            padding: 6px 10px;
+            margin: 4px 0;
+            display: inline-block;
+            max-width: 80%;
+        }
+
         .remote {
             color: #8ecdf8;
+        }
+
+        .remote .message-content {
+            border: 2px solid #1d9bf0;
+            border-radius: 8px;
+            padding: 6px 10px;
+            margin: 4px 0;
+            display: inline-block;
+            max-width: 80%;
         }
 
         .system {
