--- a/EzChat.html
+++ b/EzChat.html
@@ -15,14 +15,19 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
+            margin: 0;
             padding: 20px;
             background-color: #000000;
             color: #e7e9ea;
+            width: 100%;
+            min-height: 100vh;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
         }
 
         #chatLog {
+            flex: 1; /* Allow chat log to grow and fill available space */
             height: 400px;
             border: 1px solid #333;
             margin-bottom: 10px;
@@ -41,8 +46,21 @@
             padding: 8px;
         }
 
+        #inputArea {
+            display: inline-block;
+            width: 85%;
+            vertical-align: top;
+        }
+
+        #buttonsArea {
+            display: inline-block;
+            width: 14%;
+            vertical-align: top;
+            text-align: left;
+        }
+
         #messageInput {
-            width: 80%;
+            width: 100%;
             padding: 8px;
             min-height: 60px;
             resize: vertical;
@@ -50,6 +68,15 @@
             background-color: #16181c;
             color: #e7e9ea;
             border: 1px solid #333;
+            box-sizing: border-box;
+        }
+
+        /* Container to keep input and buttons on the same row */
+        .message-controls {
+            display: flex;
+            margin-bottom: 10px;
+            gap: 10px;
+            align-items: flex-start;
         }
 
         #connectButton {
@@ -187,7 +214,8 @@
 
 <body>
 
-    <h6 id="participantsList">EzChat: Ready to connect</h6>
+    <h5 id="participantsList">EzChat: Ready to connect</h5>
+    <div id="connectionStatus" class="status">Disconnected</div>
     <div class="form-group">
         <label for="username">Username:</label>
         <input type="text" id="username" placeholder="Your name" class="form-control">
@@ -198,14 +226,17 @@
         <button id="connectButton">Connect</button>
     </div>
 
-    <div id="chatLog"></div>
-    <div id="connectionStatus" class="status">Disconnected</div>
-    <div>
-        <textarea id="messageInput" placeholder="Type your message..." disabled></textarea>
-        <button id="attachButton" title="Attach files" disabled>📎</button>
-        <button id="sendButton" disabled>Send</button>
-        <input type="file" id="fileInput" multiple style="display: none">
+    <div class="message-controls">
+        <div id="inputArea">
+            <textarea id="messageInput" placeholder="Type your message..." disabled></textarea>
+        </div>
+        <div id="buttonsArea">
+            <button id="attachButton" title="Attach files" disabled>📎</button>
+            <button id="sendButton" disabled>Send</button>
+            <input type="file" id="fileInput" multiple style="display: none">
+        </div>
     </div>
+    <div id="chatLog"></div>
 
     <script>
         // Debug logging function
@@ -973,7 +1004,6 @@
         <style>
             #attachButton {
                 padding: 8px 15px;
-                background-color: #1d9bf0;
                 color: white;
                 border: none;
                 border-radius: 4px;
