button base class styling

--- a/EzChat.html
+++ b/EzChat.html
@@ -29,9 +29,9 @@
                 <label for="roomId">Room:</label>
                 <input type="text" id="roomId" placeholder="Room name" value="default-room" class="form-control">
 
-                <button id="connectButton">Connect</button>
-                <button id="disconnectButton" disabled>Disconnect</button>
-                <button id="clearButton" disabled>Clear</button>
+                <button id="connectButton" class="btn">Connect</button>
+                <button id="disconnectButton" class="btn" disabled>Disconnect</button>
+                <button id="clearButton" class="btn" disabled>Clear</button>
             </div>
         </div>
 
@@ -40,8 +40,8 @@
                 <textarea id="messageInput" placeholder="Type your message..." disabled></textarea>
             </div>
             <div id="buttonsArea">
-                <button id="attachButton" title="Attach files" disabled>📎</button>
-                <button id="sendButton" disabled>Send</button>
+                <button id="attachButton" class="btn" title="Attach files" disabled>📎</button>
+                <button id="sendButton" class="btn" disabled>Send</button>
                 <input type="file" id="fileInput" multiple style="display: none">
             </div>
         </div>
